--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,16 @@ body {
 	text-align: center;
 }
 
+.navbar {
+	background-color: rgba(0,0,0, 0.8);
+}
+
+#profile-pic{
+	height: 300px;
+	width: 300px;
+	margin-top: 50px;
+	margin-left: 100px;
+}
 
 
 
