--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ body {
 }
 
 #twitter-logo {
-
+	margin-left: 10px;
 }
 
 #contact-info{
@@ -202,6 +202,10 @@ a {
 
 #gh-section {
 	margin-left: 30px;
+}
+
+#li-logo {
+	margin-left: 10px;
 }
 
 
